# agentwatch-firewall

./: .gitattributes  .gitignore  CHANGELOG.md  HANDOFF.md  LESSONS_LEARNED.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/adapters/: agent_mem.py  caveman.py  cavemem.py  claude_mem.py  graphify.py  hermes.py  ruflo.py  superpowers.py
docs/: ARCHITECTURE_OVERVIEW.md  DETECTION.md  ENTERPRISE.md  FIREWALL.md  GETTING_STARTED.md  GOALS.md  INTEGRATION.md  README.md  RESULTS.md  RUNBOOK.md  SUPPORT.md  TEST_PLAN.md  TOOLING.md
eval/: README.md  harness.py
eval/results/: corpus_v0.1_test_deterministic.json  corpus_v0.1_test_llm.json
examples/: guard_demo.py  langgraph_tool_node_demo.py  reference_mcp.py  zta_demo.py
examples/reference_mcp_app/: README.md  run_pep_demo.py  toy_mcp_server.py
firewall/core/: signal.py
firewall/integration/: chronicle_bridge.py
firewall/semantic/: judge.py
firewall/taint/: __init__.py  mtp.py
paper/: EVIDENCE.md  Makefile  PAPER.md  README.md  SHARE.md  SUBMIT.md  index.html  references.bib  tracewall.tex  watchtower.tex
policies/: destructive_ops.yaml
tests/: conftest.py  test_taint_mtp.py
tests/eval/: test_harness.py
tests/integration/: test_firewall_chronicle_bridge.py  test_full_pipeline.py  test_observe_enforce_e2e.py  test_semantic_tier.py
tests/known_bad/: test_firewall_kb.py
tracewall/: __init__.py
tracewall/audit/: sink.py
tracewall/content/: filter.py
tracewall/core/: firewall.py  signal.py
tracewall/eval/: adojo_stress.py  harness.py  latency.py  mcp_brink.py  robustness_stress.py
tracewall/ops/: __init__.py  config.py  explain.py  health.py  http_metrics.py  metrics.py  reload.py
tracewall/policy/: engine.py  normalize.py  rate.py
tracewall/semantic/: judge.py
tracewall/taint/: __init__.py  ledger.py  mtp.py
tracewall/tests/: conftest.py  test_adojo_stress.py  test_agentdojo_adapter.py  test_agentdojo_soft_block.py  test_enterprise_ops.py  test_enterprise_ready.py  test_eval_reproducibility.py  test_firewall_core.py  test_firewall_kb.py  test_guard.py  test_llm_judge.py  test_mcp_framing.py  test_mcp_profiles.py  test_mcp_proxy.py  test_p0_correctness.py  (+5 more)
(+31 files in other folders)
