[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracewall"
version = "0.1.0"
description = "Standalone pluggable agent firewall — interception, identity, deterministic policy DSL, cross-session multi-hop taint propagation, and a semantic tier. Key-free and infra-free by default."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "aiosqlite>=0.19",
]

[project.optional-dependencies]
llm = [
  "openai>=1.30",
]
bench = [
  # AgentDojo adapter (transport #2 wrapper); pinned so a benchmark bump never touches core.
  "agentdojo==0.1.23",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tracewall/tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
markers = [
  "llm: live LLM test — requires LLM_API_KEY; skipped otherwise (never gates CI)",
]

[tool.hatch.build.targets.wheel]
packages = ["tracewall"]
